--- a/ParallelBenchmark/ParallelBenchmark/ParallelBenchmark.csproj
+++ b/ParallelBenchmark/ParallelBenchmark/ParallelBenchmark.csproj
@@ -56,6 +56,8 @@
     <Compile Include="TestRunner\ITestRunner.cs" />
     <Compile Include="TestRunner\TestRunner.cs" />
     <Compile Include="Tests\AbstractPerformanceTest.cs" />
+    <Compile Include="Tests\TwoTablesParallelWriteTest.cs" />
+    <Compile Include="Tests\TwoTablesSequentialWriteTest.cs" />
     <Compile Include="Tests\TwoTablesParallelLoadTest.cs" />
     <Compile Include="Tests\TwoTablesSequentialLoadTest.cs" />
   </ItemGroup>
